// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/posts/linkedin PublishPost post with a link works 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:7034659186114228224",
    "url": "https://www.linkedin.com/feed/update/urn:li:share:7034659186114228224",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost post with images keeps the link if media is present 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:7034659221623177216",
    "url": "https://www.linkedin.com/feed/update/urn:li:share:7034659221623177216",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost post with images uploads and posts multiple images 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:ugcPost:7034659212542496768",
    "url": "https://www.linkedin.com/feed/update/urn:li:ugcPost:7034659212542496768",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost post with images uploads and posts single image 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:7034659197531095040",
    "url": "https://www.linkedin.com/feed/update/urn:li:share:7034659197531095040",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost text-only post works 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:7034659181546627072",
    "url": "https://www.linkedin.com/feed/update/urn:li:share:7034659181546627072",
  },
}
`;

exports[`social-media/publish-post/linkedin PublishPost error cases invalid profileId ends in not found error 1`] = `
Err {
  "error": "MappedHTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Conflict\\",
  \\"detail\\": \\"ERROR :: /author :: Urn doesn't start with 'urn:'. Urn: 4 at index 0: 4\\\\nERROR :: /author :: Urn doesn't start with 'urn:'. Urn: 4 at index 0: 4\\\\n\\",
  \\"original\\": {
    \\"message\\": \\"ERROR :: /author :: Urn doesn't start with 'urn:'. Urn: 4 at index 0: 4\\\\nERROR :: /author :: Urn doesn't start with 'urn:'. Urn: 4 at index 0: 4\\\\n\\",
    \\"status\\": 422
  }
}
AST Path: definitions[0].statements[5].responseHandlers[1].statements[1]
Original Map Location: Line 74, column 7",
}
`;
